# ThirdProject

./: 1_5  1strategija_list.cpp  1strategija_list.h  1strategija_vector.cpp  1strategija_vector.h  2strategija_list.cpp  2strategija_list.h  2strategija_vector.cpp  2strategija_vector.h  AukštesniojoLygioStudentai10000.txt  CMakeLists.txt  README.md  Studentai10000.txt  Studentai100000.txt  ŽemesniojoLygioStudentai10000.txt  duomenuIvedimasIrSaugojimas.cpp  duomenuIvedimasIrSaugojimas.h  funkcijos.cpp  funkcijos.h  funkcijosKlase.cpp  funkcijosKlase.h  funkcijosStruct.cpp  funkcijosStruct.h  galutinioSkaiciavimas.cpp  galutinioSkaiciavimas.h  kursiokai.txt  kursiokai_rezultatai.txt  libraries.h  main.cpp  namuDarbuSkaiciavimas.cpp  namuDarbuSkaiciavimas.h  pazymiuSkaiciavimasFaile.cpp  pazymiuSkaiciavimasFaile.h  pazymiuSuvedimas.cpp  pazymiuSuvedimas.h  spausdinimas.cpp  spausdinimas.h  studentai_check.cpp  studentas.cpp  studentas.h  (+9 more)
MyPacks/:  MyPacks.pkgproj
doxygen/: 2.0Versija_doxygen.webarchive  studentas_8h_source.html
masyvai_patobulinta/: CMakeLists.txt  DinaminioMasyvoGeneravimas.cpp  DinaminioMasyvoGeneravimas.h  libraries.h  v.01_masyvai_patobulinta.cpp
tests/: basic_check.cpp
versija_05_nauja/: CMakeLists.txt  Studentai1000.txt  Studentai10000.txt  Studentai100000.txt  libraries.h  main.cpp  realizacija_su_list.cpp  realizacija_su_list.h  realizacija_su_vektoriais.cpp  realizacija_su_vektoriais.h
