cmake_minimum_required(VERSION 3.20)
project(v_03)

set(CMAKE_CXX_STANDARD 14)

add_executable(v_03 main.cpp studentas.h namuDarbuSkaiciavimas.cpp namuDarbuSkaiciavimas.h galutinioSkaiciavimas.h galutinioSkaiciavimas.cpp pazymiuSkaiciavimasFaile.cpp pazymiuSkaiciavimasFaile.h duomenuIvedimasIrSaugojimas.cpp duomenuIvedimasIrSaugojimas.h pazymiuSuvedimas.cpp pazymiuSuvedimas.h spausdinimas.cpp spausdinimas.h)
